--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,14 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <suiteXmlFiles>MainTestCasesPagesEbay.xml</suiteXmlFiles>
         <SuiteXmlFiles>AddToCartTestCase1Ebay.xml</SuiteXmlFiles>
         <SuiteXmlFiles>AddToWatchListTestCase2Ebay.xml</SuiteXmlFiles>
         <SuiteXmlFiles>BuyItNowTestCase3Ebay.xml</SuiteXmlFiles>
-        <SuiteXmlFiles>CheckStatusTestCase5Ebay.xml</SuiteXmlFiles>
         <SuiteXmlFiles>LocatorWrongTestCase4Ebay.xml</SuiteXmlFiles>
+        <SuiteXmlFiles>CheckStatusTestCase5Ebay.xml</SuiteXmlFiles>
+        <SuiteXmlFiles>FindJobsInPortalTestCase6Ebay.xml</SuiteXmlFiles>
     </properties>
 
     <dependencies>
@@ -98,6 +101,12 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.23.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-web -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-web</artifactId>
+            <version>2.24.3</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
